# captainlog

./: .gitignore  CMakeLists.txt  README.md  init_debug_build.sh  init_release_build.sh
app/: CMakeLists.txt  app.cpp  app_cli.cpp  app_config.h.in
cmake/: FindLibevent.cmake  FindPostgreSQLFrontEnd.cmake
include/captainlog/: common.hpp  db.hpp  db_pg.hpp  db_sqlite.hpp  import_export.hpp  rest.hpp  task.hpp  utils.hpp  web.hpp
lib/: CMakeLists.txt  db.cpp  db_pg.cpp  db_sqlite.cpp  import_export.cpp  rest.cpp  task.cpp  utils.cpp  web.cpp
snippets/: weekly.sql
src/: dev_setup.cpp  main.cpp  prod_setup.cpp
tests/: CMakeLists.txt  test_db.cpp  test_db_pg.cpp  test_task.cpp
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  main.ts  style.css
ui/src/components/: CalendarComponent.vue  ProjectViewHeader.vue  RequiredValidityIcon.vue
ui/src/i18n/: AppI18n.ts  CalendarComponentI18n.ts
ui/src/models/: LoginParams.ts
ui/src/services/: Service.ts
ui/src/views/: DayView.vue  LoginView.vue  ProjectEditionView.vue  ProjectsListView.vue  ProjectsView.vue
web_client/: day.html
web_client/css/: common.css
web_client/js/: common.js  task_service.js
